--- a/ManDates/ManDates.csproj
+++ b/ManDates/ManDates.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="morelinq" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
