--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: csharp
 mono: none
-dotnet: 2.2.202
-
-install:
-- dotnet restore
+sudo: required
+dist: xenial
+dotnet: 2.2
 
 script:
- - dotnet build
+- dotnet restore
+- dotnet build
